--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,13 @@
 name: Java CI with Maven
 
 on:
-
+  push
   schedule:
-    - cron: '48 4 * * *' # run at 7AM UTC ( = 2AM CST)
+    - cron: '0 7 * * *' # run at 7AM UTC ( = 2AM CST)
 
 jobs:
   cortado-build-and-test:
-    timeout-minutes: 30
+    timeout-minutes: 10
 
     runs-on: ${{ matrix.os }}
 
