--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,9 @@
 name: Java CI with Maven
 
 on:
-  push
+  push:
+    branches:
+      - 'main'
   schedule:
     - cron: '0 7 * * *' # run at 7AM UTC ( = 2AM CST)
 
