--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,10 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches:
-      - 'main'
+  # TODO: Enable CI on pushes once public (i.e. when Github Actions are free)
+  #push:
+  #  branches:
+  #    - 'main'
   schedule:
     - cron: '0 7 * * *' # run at 7AM UTC ( = 2AM CST)
 
