--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - 'main'
+  pull_request:
+    branches:
+      - 'main'
   schedule:
     - cron: '0 7 * * *' # run at 7AM UTC ( = 2AM CST)
 
