--- a/cortado-benchmarks/pom.xml
+++ b/cortado-benchmarks/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.utexas.cs.utopia.cortado</groupId>
     <artifactId>cortado-benchmarks</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>pom</packaging>
     <name>cortado-benchmarks</name>
 
