--- a/cortado-core/cortado/pom.xml
+++ b/cortado-core/cortado/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>edu.utexas.cs.utopia.cortado</groupId>
     <artifactId>cortado-core</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
 
   <artifactId>cortado</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.0</version>
   <name>cortado</name>
   <description>Automated implicit monitor implementation.</description>
   <url>http://www.github.com/utopia-group/cortado</url>
