add original benchmark harnesses

--- a/cortado-benchmarks/pom.xml
+++ b/cortado-benchmarks/pom.xml
@@ -9,6 +9,7 @@
 
     <modules>
         <module>cortado-benchmark-implementations</module>
+        <module>cortado-benchmark-harnesses</module>
     </modules>
 
     <dependencyManagement>
